--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header>    
-        <h1 class="nombre-sitio"> Tienda <span> Muebles </span></h1>
+        <h1 class="nombre-sitio"> House <span> Store </span></h1>
     </header>
 
     <div class="contenedor-navegacion">
